# akademie

./: Cargo.toml
src/: app.rs  main.rs  ui.rs
src/app/: mod.rs
src/kafka/: client.rs
src/ui/: mod.rs
