[package]
name = "akademie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
kafka-protocol = { git = "https://github.com/tychedelia/kafka-protocol-rs" }
tokio = { version = "1", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2"
tokio-tower = "0.7.0-rc3"
tower = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
bytes = "1.3"
futures = "0.3"